[package]
name = "pa-types"
authors = ["Ragnar Groot Koerkamp", "Daniel Liu"]
description = "Core library types for global pairwise alignment"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-types"
license = "MIT"
keywords = ["pairwise-alignment", "bioinformatics", "library"]
readme = "README.md"
categories = ["science"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
parse-size = { version = "^1.0", features = ["std"] }
itertools = "0.10.5"
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign"] }
