[package]
name = "pa-types"
authors = ["Ragnar Groot Koerkamp", "Daniel Liu"]
description = "Core library types for global pairwise alignment"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-types"
license = "MIT"
keywords = ["pairwise-alignment", "bioinformatics", "library"]
readme = "README.md"
categories = ["science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
derive_more = { version = "2.0.1", default-features = false, features = ["add", "add_assign"] }
clap = { version = "4.3.0", features = ["derive"], optional = true }
